1) Fixed layout issue on home page to fit for different screen size. 2) On footer section, changed "contact" text to "phone"

--- a/angular5-client/src/app/app.component.scss
+++ b/angular5-client/src/app/app.component.scss
@@ -1,8 +1,14 @@
+.fullscreen {
+  height: 100%;
+  width: 100%;
+}
+
 .spacer {
   flex: 1 1 auto;
 }
 
 .main-content {
-	min-height: 545px;
-    position: relative;
+  height: calc(100% - 160px);
+  position: relative;
+  min-height: 500px;
 }
