--- a/angular5-client/src/app/core/login/login.component.scss
+++ b/angular5-client/src/app/core/login/login.component.scss
@@ -1,4 +1,8 @@
 .login {
+    .login-card {
+        top: calc(50% - 250px);
+    }
+
     .mat-card-header-text {
 	    margin: 5px 0px 0px 0px!important;
     }
