--- a/angular5-client/src/app/projects/all-projects/all-projects.component.scss
+++ b/angular5-client/src/app/projects/all-projects/all-projects.component.scss
@@ -1,6 +1,8 @@
 .mat-table {
   overflow: auto;
-  max-height: 500px;
+  // max-height: calc(70vh - 155px);
+  height: calc(70vh - 165px);
+  // height: 50vmax;
 }
 
 .mat-header-cell.mat-sort-header-sorted {
